ajeitando detalhes nas rotas e documentação Swagger
